[gd_scene load_steps=4 format=3 uid="uid://j7s6w7om7x7e"]

[ext_resource type="Script" path="res://Scripts/login.gd" id="1_login"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.12, 0.18, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.8, 0.5)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color(0, 0, 0, 0.5)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.3, 0.5, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.6, 0.9, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_login")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.06, 0.12, 1)

[node name="Stars" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.1, 0.18, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 1, 1)
theme_override_font_sizes/font_size = 36
text = "üöÅ DRONE LOGIN SYSTEM"
horizontal_alignment = 1

[node name="VideoContainer" type="AspectRatioContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
ratio = 1.77778

[node name="VideoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/VideoContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VideoContainer/VideoPanel"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PlaceholderLabel" type="Label" parent="MarginContainer/VBoxContainer/VideoContainer/VideoPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.5, 0.7, 0.6)
theme_override_font_sizes/font_size = 24
text = "üìπ Waiting for camera..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/StatusPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 1, 1)
theme_override_font_sizes/font_size = 20
text = "üîÑ Initializing..."
horizontal_alignment = 1

[node name="ConnectionLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.7, 0.9, 0.8)
theme_override_font_sizes/font_size = 14
text = "üì° UDP Port: Connecting..."
horizontal_alignment = 1

[node name="ButtonPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="ConnectButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.4, 1, 0.4, 1)
theme_override_colors/font_pressed_color = Color(0.3, 0.8, 0.3, 1)
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "üìπ CONNECT CAMERA"

[node name="LoginButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.9, 1, 1)
theme_override_colors/font_color = Color(0.9, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "üîê LOGIN"

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
visible = false
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "üîÑ RETRY"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonPanel"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
text = "‚ùå QUIT"

[node name="Footer" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.5, 0.6, 0.6)
theme_override_font_sizes/font_size = 12
text = "Gesture-based authentication via UDP"
horizontal_alignment = 1
